[package]
name = "rusty-keyboard"
version = "0.1.0"
edition = "2021"
resolver= "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-kb2040 = "0.3.0"
ws2812-pio="0.3.0"
smart-leds="0.3.0"
cortex-m = "0.7.3"
embedded-time= "0.12.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
cortex-m-rt = "0.7.0" 
nb="1.0"

